dataset1235/2025-2/610742602/users/2485683856/executions/677928262_2383239197.log
== SUBMISSION (2025-08-28 17:56:14)
-- CODE: 
import math
A = float(input('Digite a distância A entre o observador e a primeira arvore: '))
B = float(input('Digite a distância B entre o observador e a segunda arvore: '))
gamma_graus = float(input('Digite o ângulo Y entre A e B (em graus): '))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B * math.cos(gamma_rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:40:48)
-- CODE: 
A = float(input('Digite a distância A entre o observador e a primeira arvore: '))
B = float(input('Digite a distância B entre o observador e a segunda arvore: '))
gamma_graus = float(input('Digite o ângulo Y entre A e B (em graus): '))

gamma_red = math.radians(gamma_graus)

CC = math.rqst (A ** 2 + B ** 2 - 2 * A * B * math.cos(gamma_red))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_red = math.radians(gamma_graus)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_red = math.radians(gamma_graus)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_red = math.radians(gamma_graus)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_red = math.radians(gamma_graus)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_red = math.radians(gamma_graus)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_red = math.radians(gamma_graus)
                ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
